force-app/main/default/objects/Shipping_Project__c/Shipping_Project__c.object-meta.xml
<CustomObject>
    <label>Shipping Project</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-SP#{00000}</displayFormat>
        <label>Shipping project Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>