force-app/main/default/objects/Shipping_Project__c/fields/Actual_Planned_TEU__c.field-meta.xml
<CustomField>
    <fullName>Actual_Planned_TEU__c</fullName>
    <label>Actual Planned TEU</label>
    <summarizedField>Shipping_Order__c.Actual_TEU__c</summarizedField>
    <summaryForeignKey>Shipping_Order__c.Shipping_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>