force-app/main/default/objects/Shipping_Project__c/fields/Destination_Port__c.field-meta.xml
<CustomField>
    <fullName>Destination_Port__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Port</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Port</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Incoming Shipment</relationshipLabel>
    <relationshipName>Shipping_Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>