force-app/main/default/objects/Shipping_Project__c/fields/Port_arrived_date__c.field-meta.xml
<CustomField>
    <fullName>Port_arrived_date__c</fullName>
    <label>Port arrived date</label>
    <type>DateTime</type>
</CustomField>