force-app/main/default/objects/Shipping_Project__c/fields/Port_leave_date__c.field-meta.xml
<CustomField>
    <fullName>Port_leave_date__c</fullName>
    <label>Port leave date</label>
    <type>DateTime</type>
</CustomField>