force-app/main/default/objects/Shipping_Project__c/fields/Ship__c.field-meta.xml
<CustomField>
    <fullName>Ship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship</label>
    <referenceTo>Ship__c</referenceTo>
    <relationshipLabel>Shipping Projects</relationshipLabel>
    <relationshipName>Shipping_Projects</relationshipName>
    <type>Lookup</type>
</CustomField>