force-app/main/default/objects/Shipping_Project__c/fields/Ship_Class__c.field-meta.xml
<CustomField>
    <fullName>Ship_Class__c</fullName>
    <formula>Ship__r.Class__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship Class</label>
    <type>Text</type>
</CustomField>