force-app/main/default/objects/Shipping_Project__c/fields/Ship_Owner__c.field-meta.xml
<CustomField>
    <fullName>Ship_Owner__c</fullName>
    <formula>Ship__r.Ship_owner__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship Owner</label>
    <type>Text</type>
</CustomField>