force-app/main/default/objects/Shipping_Project__c/fields/Total_planned_TEU__c.field-meta.xml
<CustomField>
    <fullName>Total_planned_TEU__c</fullName>
    <label>Total planned TEU</label>
    <summarizedField>Shipping_Order__c.Planned_TEU__c</summarizedField>
    <summaryForeignKey>Shipping_Order__c.Shipping_Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>