force-app/main/default/objects/Shipping_Project__c/fields/Usage_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Usage_Percentage__c</fullName>
    <formula>Actual_Planned_TEU__c / Ship__r.Total_TEU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usage Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>