force-app/main/default/objects/Shipping_Project__c/listViews/Shipping_Tracker.listView-meta.xml
<ListView>
    <fullName>Shipping_Tracker</fullName>
    <columns>NAME</columns>
    <columns>Ship__c</columns>
    <columns>Status__c</columns>
    <columns>Total_planned_TEU__c</columns>
    <columns>Actual_Planned_TEU__c</columns>
    <columns>Usage_Percentage__c</columns>
    <columns>Origin_port__c</columns>
    <columns>Port_leave_date__c</columns>
    <columns>Destination_Port__c</columns>
    <columns>Port_arrived_date__c</columns>
    <columns>Ship_Owner__c</columns>
    <columns>Ship_Class__c</columns>
    <filterScope>Mine</filterScope>
    <label>Shipping Tracker</label>
</ListView>